2008-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Josep Torra

	* gst/mpegdemux/gstmpegtsdemux.c:
	Heuristic approach when resyncing.

2008-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/gstmpegdesc.c:
	Length should be a guint8 not a gint.
	* gst/mpegdemux/mpegtspacketizer.c:
	Convert text to utf8 for each descriptor separately and not
	concatenate them first and convert after.
	
2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* gst/modplug/gstmodplug.cc:
	  Send tag event. Fixes #559286.

2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtsparse.c:
	Fix another memleak.

2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtspacketizer.c:
	* sys/dvb/gstdvbsrc.c:
	Fix memleaks.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* ext/alsaspdif/Makefile.am:
	* ext/amrwb/Makefile.am:
	* ext/apexsink/Makefile.am:
	* ext/arts/Makefile.am:
	* ext/artsd/Makefile.am:
	* ext/audiofile/Makefile.am:
	* ext/audioresample/Makefile.am:
	* ext/bz2/Makefile.am:
	* ext/cdaudio/Makefile.am:
	* ext/celt/Makefile.am:
	* ext/dc1394/Makefile.am:
	* ext/dirac/Makefile.am:
	* ext/directfb/Makefile.am:
	* ext/divx/Makefile.am:
	* ext/dts/Makefile.am:
	* ext/faac/Makefile.am:
	* ext/faad/Makefile.am:
	* ext/gsm/Makefile.am:
	* ext/hermes/Makefile.am:
	* ext/ivorbis/Makefile.am:
	* ext/jack/Makefile.am:
	* ext/jp2k/Makefile.am:
	* ext/ladspa/Makefile.am:
	* ext/lcs/Makefile.am:
	* ext/libfame/Makefile.am:
	* ext/libmms/Makefile.am:
	* ext/metadata/Makefile.am:
	* ext/mpeg2enc/Makefile.am:
	* ext/mplex/Makefile.am:
	* ext/musepack/Makefile.am:
	* ext/musicbrainz/Makefile.am:
	* ext/mythtv/Makefile.am:
	* ext/nas/Makefile.am:
	* ext/neon/Makefile.am:
	* ext/ofa/Makefile.am:
	* ext/polyp/Makefile.am:
	* ext/resindvd/Makefile.am:
	* ext/sdl/Makefile.am: